# prose

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  cmakelists.txt  vcpkg.json
catlib/: class.h  fstream.h  halloc.c  halloc.h  token.c  token.h  types.h  vector.h
prose/: fib.ps  test.pr  test.ps  test.psm
src/: ast.c  ast.cxx  ast.h  ast.hxx  class.h  keywords.c  keywords.h  lex.c  lex.h  main.c  main.cxx  mem.c  mem.h  parse.h  tables.c  tables.h  tok.c  tok.h  token.c  token.cxx  token.hxx  tree_walk.c  tree_walk.h  types.h  vec.h
src/asm/: asm.c  asm.h  directive.c  directive.h
src/asm/backends/: backends.c  backends.h
src/asm/backends/prsm/: parse.c  parse.h
src/asm/backends/x86_64/: opcodes.c  opcodes.h  parse.c  parse.h
src/vm/: vm.c  vm.h
tests/: hello.prose  test.pasm  test.prose
